--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>lesson_7</title>
+    <link rel="stylesheet" href="style.css">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, numquam.</p>
 </head>
 <body>
 <h1>Lesson 7</h1>
